Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=52461 Don't assume file based URLs when checking last modified times for global and host level web.xml files Patch provided by violetagg
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1231290 13f79535-47bb-0310-9956-ffa450edef68